event page-updated content and little footer

--- a/events.html
+++ b/events.html
@@ -105,28 +105,31 @@
       				<div class="container">
       					<div class="front" style="background-image: url(https://unsplash.it/502/502/)">
       						<div class="inner">
-      							<p>Strizzes</p>
-                    <span>Lorem ipsum</span>
+      							<p>Women Empowerment Programme</p>
+                    <span>Read more</span>
       						</div>
       					</div>
       					<div class="back">
       						<div class="inner">
-      							<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+      							<p>A package with a mission to educate and empower women from financially low/weak status by providing training classes and
+          labour units.</p>
       						</div>
       					</div>
       				</div>
       			</div>
+
       			<div class="col" ontouchstart="this.classList.toggle('hover');">
       				<div class="container">
       					<div class="front" style="background-image: url(https://unsplash.it/503/503/)">
       						<div class="inner">
-      							<p>Clossyo</p>
-                    <span>Lorem ipsum</span>
+      							<p>Farmer Welfare</p>
+                    <span>Read more</span>
       						</div>
       					</div>
       					<div class="back">
       						<div class="inner">
-      							<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+      							<p>To conduct programs for organic farming, group farming, organic manure supply,organic pesticide supply, terass farming, construction of biogas plants, agriculture labour
+                    supply, dairy farming, fish farming, green house farming etc</p>
       						</div>
       					</div>
       				</div>
@@ -136,32 +139,71 @@
       				<div class="container">
       					<div class="front" style="background-image: url(https://unsplash.it/506/506/)">
       						<div class="inner">
-      							<p>Acirassi</p>
-                    <span>Lorem ipsum</span>
+      							<p>Grant Relief and Assistance</p>
+                    <span>Read more</span>
       						</div>
       					</div>
       					<div class="back">
       						<div class="inner">
-      							<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+      							<p>To grant relief and assistance to the needy victims during natural calamities such as famine, earth quake, flood, fire, pestilence etc and to give donations and other assistance to institutions, establishments or persons engaged in such relief work</p>
       						</div>
       					</div>
       				</div>
       			</div>
+
       			<div class="col" ontouchstart="this.classList.toggle('hover');">
       				<div class="container">
       					<div class="front" style="background-image: url(https://unsplash.it/508/508/)">
       						<div class="inner">
-      							<p>Sohanidd</p>
-                    <span>Lorem ipsum</span>
+      							<p>Monetary Assistance</p>
+                    <span>Read more</span>
       						</div>
       					</div>
       					<div class="back">
       						<div class="inner">
-      							<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                    <ul type="square">
+                      <li>To provide <b>Monetary Assistance</b> to :-
+                        <p>i) Deserving students whether they are directly under the care of the trust or not.</p>
+                        <p>ii) Deserving children for medical purpose whether they are under the direct care of the trust or not</p>
+                        <p>iii) Any destitute</p></li>
       						</div>
       					</div>
       				</div>
       			</div>
+
+            <div class="col" ontouchstart="this.classList.toggle('hover');">
+              <div class="container">
+                <div class="front" style="background-image: url(https://unsplash.it/503/503/)">
+                  <div class="inner">
+                    <p>Sanitation Mission (Waste Management Programme)</p>
+                    <span>Read more</span>
+                  </div>
+                </div>
+                <div class="back">
+                  <div class="inner">
+                    <p>To educate the general public regarding solid waste management with a mission to tackle the growing concern of improper garbage disposal. Awareness about the solid waste project, which is a part of a clean world environment, workshops, supervision by the management team experts for setting up its unit on demand.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col" ontouchstart="this.classList.toggle('hover');">
+              <div class="container">
+                <div class="front" style="background-image: url(https://unsplash.it/506/506/)">
+                  <div class="inner">
+                    <p>Medical Support (punarjani)</p>
+                    <span>Read more</span>
+                  </div>
+                </div>
+                <div class="back">
+                  <div class="inner">
+                    <p>With this service, the Trust intends to provide medical aid and medicines to financially weaker patients</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
       		</div>
 </section>
 
@@ -221,20 +263,71 @@
             <div class="container">
 
                 <div class="row">
+
+                  <div class="col-md-4">
+
+                      <div class="footer-col">
+
+                          <h4 class="footer-title">LAST TWEETS <span class="title-under"></span></h4>
+
+                          <div class="footer-content">
+                              <ul class="tweets list-unstyled">
+                                  <li class="tweet">
+
+                                      20 Surprise Eggs, Kinder Surprise Cars 2 Thomas Spongebob Disney Pixar  http://t.co/fTSazikPd4
+
+                                  </li>
+
+                                  <li class="tweet">
+
+                                      20 Surprise Eggs, Kinder Surprise Cars 2 Thomas Spongebob Disney Pixar  http://t.co/fTSazikPd4
+
+                                  </li>
+
+                                  <li class="tweet">
+
+                                      20 Surprise Eggs, Kinder Surprise Cars 2 Thomas Spongebob Disney Pixar  http://t.co/fTSazikPd4
+
+                                  </li>
+
+                              </ul>
+                          </div>
+
+                      </div>
+
+                  </div>
+
+
                     <div class="col-md-4">
 
                         <div class="footer-col">
 
-                            <h4 class="footer-title">About us <span class="title-under"></span></h4>
+                            <h4 class="footer-title">Quick Link <span class="title-under"></span></h4>
 
-                            <div class="footer-content">
-                                <p>
-                                    <strong>Sadaka</strong> ipsum dolor sit amet, consectetur adipiscing elit. Ut at eros rutrum turpis viverra elementum semper quis ex. Donec lorem nulla, aliquam quis neque vel, maximus lacinia urna.
-                                </p>
+                            <div class="footer-content" >
+                              <ul class="tweets list-unstyled">
+                                  <li >
+                                      <a href="index.html"><span class="fa fa-chevron-right mr-2"></span> HOME</a>
+                                  </li>
+                                  <li >
+                                      <a href="about.html"><span class="fa fa-chevron-right mr-2"></span> ABOUT US</a>
+                                  </li>
+                                  <li ><a href="#"><span class="fa fa-chevron-right mr-2"></span> MEDIA</a>
+                                    <ul class="submenu">
+                                      <li class="submenu-item"><a href="events.html"> EVENTS</a></li>
+                                      <li class="submenu-item"><a href="fundraising.html"> FUND RAISING</a></li>
+                                    </ul></li>
+                                  <li >
+                                      <a href="project.html"><span class="fa fa-chevron-right mr-2"></span> PROJECTS</a>
+                                  </li>
+                                  <li >
+                                      <a href="volunteer.html"><span class="fa fa-chevron-right mr-2"></span> VOLUNTEER</a>
+                                  </li>
+                                  <!-- <li class="tweet">
+                                      <a href="contact.html"><span class="fa fa-chevron-right mr-2"></span>CONTACT US</a>
+                                  </li> -->
 
-                                <p>
-                                    ILorem ipsum dolor sit amet, consectetur adipiscing elit. Ut at eros rutrum turpis viverra elementum semper quis ex. Donec lorem nulla, aliquam quis neque vel, maximus lacinia urna.
-                                </p>
+                              </ul>
 
                             </div>
 
@@ -242,38 +335,6 @@
 
                     </div>
 
-                    <div class="col-md-4">
-
-                        <div class="footer-col">
-
-                            <h4 class="footer-title">LAST TWEETS <span class="title-under"></span></h4>
-
-                            <div class="footer-content">
-                                <ul class="tweets list-unstyled">
-                                    <li class="tweet">
-
-                                        20 Surprise Eggs, Kinder Surprise Cars 2 Thomas Spongebob Disney Pixar  http://t.co/fTSazikPd4
-
-                                    </li>
-
-                                    <li class="tweet">
-
-                                        20 Surprise Eggs, Kinder Surprise Cars 2 Thomas Spongebob Disney Pixar  http://t.co/fTSazikPd4
-
-                                    </li>
-
-                                    <li class="tweet">
-
-                                        20 Surprise Eggs, Kinder Surprise Cars 2 Thomas Spongebob Disney Pixar  http://t.co/fTSazikPd4
-
-                                    </li>
-
-                                </ul>
-                            </div>
-
-                        </div>
-
-                    </div>
 
 
                     <div class="col-md-4">
@@ -283,8 +344,12 @@
                             <h4 class="footer-title">Contact us <span class="title-under"></span></h4>
 
                             <div class="footer-content">
-
-                                <div class="footer-form" >
+                              <ul>
+              	                <li class="tweet"><span class="icon fa fa-map marker"></span><span class="text"> Kochupurayil, Chennithala, P O Mavelikkara, Allappey 690105</span></li>
+              	                <li class="tweet"><a href="#"><span class="icon fa fa-phone" ></span><span class="text"> +91 8848 750 988, +91 8921799665</span></a></li>
+              	                <li class="tweet"><a href="#"><span class="icon fa fa-paper-plane pr-4"></span><span class="text"> thetravancorecharitabletrust@gmail.com</span></a></li>
+              	              </ul>
+                                <!-- <div class="footer-form" >
 
                                     <form action="php/mail.php" class="ajax-form">
 
@@ -318,22 +383,15 @@
 
                                     </form>
 
-                                </div>
+                                </div> -->
                             </div>
 
                         </div>
 
                     </div>
                     <div class="clearfix"></div>
-
-
-
                 </div>
-
-
             </div>
-
-
         </div>
 
         <div class="footer-bottom">
