Changes done to footer of about

--- a/contact.html
+++ b/contact.html
@@ -154,10 +154,10 @@
 					<div class="contact-items">
 
 						<ul class="list-unstyled contact-items-list">
-							<li class="contact-item"> <span class="contact-icon"> <i class="fa fa-map-marker"></i></span> 135 Hay el nahda, Rabat, Morocco</li>
-							<li class="contact-item"> <span class="contact-icon"> <i class="fa fa-phone"></i></span> 00 210 25 55  55 11</li>
+							<li class="contact-item"> <span class="contact-icon"> <i class="fa fa-map-marker"></i></span> Kochupurayil, Chennithala, PO Mavelikkara, Allappey. Pincode:- 690105</li>
+							<li class="contact-item"> <span class="contact-icon"> <i class="fa fa-phone"></i></span> +91 8848 750 988, +91 8921799665</li>
 
-							<li class="contact-item"> <span class="contact-icon"> <i class="fa fa-envelope"></i></span> contact@Travancore.org</li>
+							<li class="contact-item"> <span class="contact-icon"> <i class="fa fa-envelope"></i></span> thetravancorecharitabletrust@gmail.com</li>
 						</ul>
 					</div>
 
