--- a/events.html
+++ b/events.html
@@ -2,7 +2,7 @@
 <html class="no-js">
     <head>
         <meta charset="utf-8">
-        <title>Events | Charity / Non-profit responsive Bootstrap HTML5 template</title>
+        <title>Events | Charity </title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -264,7 +264,7 @@
 
                 <div class="row">
 
-                  <div class="col-md-4">
+                  <!-- <div class="col-md-4">
 
                       <div class="footer-col">
 
@@ -295,17 +295,17 @@
 
                       </div>
 
-                  </div>
+                  </div> -->
 
 
-                    <div class="col-md-4">
+                    <div class="col-md-6">
 
                         <div class="footer-col">
 
                             <h4 class="footer-title">Quick Link <span class="title-under"></span></h4>
 
                             <div class="footer-content" >
-                              <ul class="tweets list-unstyled">
+                              <ul>
                                   <li >
                                       <a href="index.html"><span class="fa fa-chevron-right mr-2"></span> HOME</a>
                                   </li>
@@ -337,7 +337,7 @@
 
 
 
-                    <div class="col-md-4">
+                    <div class="col-md-6">
 
                         <div class="footer-col">
 
@@ -345,9 +345,9 @@
 
                             <div class="footer-content">
                               <ul>
-              	                <li class="tweet"><span class="icon fa fa-map marker"></span><span class="text"> Kochupurayil, Chennithala, P O Mavelikkara, Allappey 690105</span></li>
-              	                <li class="tweet"><a href="#"><span class="icon fa fa-phone" ></span><span class="text"> +91 8848 750 988, +91 8921799665</span></a></li>
-              	                <li class="tweet"><a href="#"><span class="icon fa fa-paper-plane pr-4"></span><span class="text"> thetravancorecharitabletrust@gmail.com</span></a></li>
+              	                <li><span class="contact-icon"> <i class="fa fa-map-marker"></i></span> Kochupurayil, Chennithala, PO Mavelikkara, Allappey. Pincode:- 690105</span></li>
+              	                <li><a href="#"><span class="icon fa fa-phone" ></span> +91 8848 750 988, +91 8921799665</span></a></li>
+              	                <li><a href="#"><span class="icon fa fa-paper-plane pr-4"></span> thetravancorecharitabletrust@gmail.com</span></a></li>
               	              </ul>
                                 <!-- <div class="footer-form" >
 
