fixed the home carousal ,added images in events carousal,edited donate now button

--- a/events.html
+++ b/events.html
@@ -37,7 +37,8 @@
     <header class="main-header">
 
 
-        <nav class="navbar navbar-static-top">
+      <nav class="navbar navbar-static-top">
+
 
           <div class="navbar-main">
 
@@ -53,7 +54,7 @@
 
                 </button>
 
-                <a class="navbar-brand" href="index.html"><img class="navbar-img" src="assets/images/logo3.png" alt=""></a>
+                <a class="navbar-brand" href="index.html"><img class="navbar-img" src="assets/images/logo4.png" alt=""></a>
 
               </div>
 
@@ -61,9 +62,9 @@
 
                 <ul class="nav navbar-nav">
 
-                  <li><a href="index.html">HOME</a></li>
+                  <li><a class="is-active" href="index.html">HOME</a></li>
                   <li><a href="about.html">ABOUT</a></li>
-                  <li class="has-child"><a class="is-active" href="#">MEDIA</a>
+                  <li class="has-child"><a href="#">MEDIA</a>
                     <ul class="submenu">
                       <li class="submenu-item"><a href="events.html">EVENTS</a></li>
                       <li class="submenu-item"><a href="fundraising.html">FUND RAISING</a></li>
@@ -81,8 +82,8 @@
 
 
       </nav>
-
-    </header>
+ 
+  </header> <!-- /. main-header -->
 
         <a class="btn btn-lg FAB" href="#">Donate<br>Now!</a>
 
@@ -103,7 +104,7 @@
 
       			<div class="col" ontouchstart="this.classList.toggle('hover');">
       				<div class="container">
-      					<div class="front" style="background-image: url(https://unsplash.it/502/502/)">
+      					<div class="front" style="background-image: url(https://images.unsplash.com/photo-1526234252162-ce107695b0fc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80)">
       						<div class="inner">
       							<p>Women Empowerment Programme</p>
                     <span>Read more</span>
@@ -120,7 +121,7 @@
 
       			<div class="col" ontouchstart="this.classList.toggle('hover');">
       				<div class="container">
-      					<div class="front" style="background-image: url(https://unsplash.it/503/503/)">
+      					<div class="front" style="background-image: url(https://images.unsplash.com/photo-1532929900024-6413d2ed39c8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=773&q=80)">
       						<div class="inner">
       							<p>Farmer Welfare</p>
                     <span>Read more</span>
@@ -137,7 +138,7 @@
 
       			<div class="col" ontouchstart="this.classList.toggle('hover');">
       				<div class="container">
-      					<div class="front" style="background-image: url(https://unsplash.it/506/506/)">
+      					<div class="front" style="background-image: url(https://images.unsplash.com/photo-1461532257246-777de18cd58b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60)">
       						<div class="inner">
       							<p>Grant Relief and Assistance</p>
                     <span>Read more</span>
@@ -153,7 +154,7 @@
 
       			<div class="col" ontouchstart="this.classList.toggle('hover');">
       				<div class="container">
-      					<div class="front" style="background-image: url(https://unsplash.it/508/508/)">
+      					<div class="front" style="background-image: url(https://images.unsplash.com/photo-1565514021506-1dc81b752c5e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80)">
       						<div class="inner">
       							<p>Monetary Assistance</p>
                     <span>Read more</span>
@@ -173,7 +174,7 @@
 
             <div class="col" ontouchstart="this.classList.toggle('hover');">
               <div class="container">
-                <div class="front" style="background-image: url(https://unsplash.it/503/503/)">
+                <div class="front" style="background-image: url(https://images.unsplash.com/photo-1561730142-ad059b7887b0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80)">
                   <div class="inner">
                     <p>Sanitation Mission (Waste Management Programme)</p>
                     <span>Read more</span>
@@ -189,7 +190,7 @@
 
             <div class="col" ontouchstart="this.classList.toggle('hover');">
               <div class="container">
-                <div class="front" style="background-image: url(https://unsplash.it/506/506/)">
+                <div class="front" style="background-image: url(https://images.unsplash.com/photo-1576765974102-b756026ecee3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1514&q=80)">
                   <div class="inner">
                     <p>Medical Support (punarjani)</p>
                     <span>Read more</span>
