--- a/fundraising.html
+++ b/fundraising.html
@@ -37,52 +37,53 @@
 
         <nav class="navbar navbar-static-top">
 
-          <div class="navbar-main">
 
-            <div class="container">
+            <div class="navbar-main">
 
-              <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <div class="container">
 
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
+                <div class="navbar-header">
+                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
 
-                </button>
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
 
-                <a class="navbar-brand" href="index.html"><img class="navbar-img" src="assets/images/logo3.png" alt=""></a>
+                  </button>
 
-              </div>
+                  <a class="navbar-brand" href="index.html"><img class="navbar-img" src="assets/images/logo4.png" alt=""></a>
 
-              <div id="navbar" class="navbar-collapse collapse pull-right">
+                </div>
 
-                <ul class="nav navbar-nav">
+                <div id="navbar" class="navbar-collapse collapse pull-right">
 
-                  <li><a  href="index.html">HOME</a></li>
-                  <li><a href="about.html">ABOUT</a></li>
-                  <li  class="has-child"><a class="is-active" href="#">MEDIA</a>
-                    <ul class="submenu">
-                      <li class="submenu-item"><a href="events.html">EVENTS</a></li>
-                      <li class="submenu-item"><a href="fundraising.html">FUND RAISING</a></li>
+                  <ul class="nav navbar-nav">
+
+                    <li><a class="is-active" href="index.html">HOME</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
+                    <li class="has-child"><a href="#">MEDIA</a>
+                      <ul class="submenu">
+                        <li class="submenu-item"><a href="events.html">EVENTS</a></li>
+                        <li class="submenu-item"><a href="fundraising.html">FUND RAISING</a></li>
+                      </ul>
+                    </li>
+                    <li><a href="project.html">PROJECTS</a></li>
+                    <li><a href="volunteer.html">VOLUNTEER</a></li>
+                    <li><a href="contact.html">CONTACT US</a></li>
                     </ul>
-                  </li>
-                  <li><a href="project.html">PROJECTS</a></li>
-                  <li><a href="volunteer.html">VOLUNTEER</a></li>
-                  <li><a href="contact.html">CONTACT US</a></li>
-                  </ul>
-                </div> <!-- /#navbar -->
+                  </div> <!-- /#navbar -->
 
-            </div> <!-- /.container -->
+              </div> <!-- /.container -->
 
-          </div> <!-- /.navbar-main -->
+            </div> <!-- /.navbar-main -->
 
 
-      </nav>
+        </nav>
 
     </header> <!-- /. main-header -->
 
-        <a class="btn btn-lg FAB" href="#">Donate<br>Now!</a>
+    <a class="btn btn-lg FAB" href="#">Donate<br>Now!</a>
 
 
 	<div class="page-heading text-center">
