--- a/index.html
+++ b/index.html
@@ -35,38 +35,6 @@
 
         <nav class="navbar navbar-static-top">
 
-            <!-- <div class="navbar-top">
-
-              <div class="container">
-                  <div class="row">
-
-                    <div class="col-sm-6 col-xs-12">
-
-                        <ul class="list-unstyled list-inline header-contact">
-                            <li> <i class="fa fa-phone"></i> <a href="tel:">+212 658 986 213 </a> </li>
-                             <li> <i class="fa fa-envelope"></i> <a href="mailto:contact@sadaka.org">contact@sadaka.org</a> </li>
-                       </ul>
-
-                    </div>
-
-                    <div class="col-sm-6 col-xs-12 text-right">
-
-                        <ul class="list-unstyled list-inline header-social">
-
-                            <li> <a href="#"> <i class="fa fa-facebook"></i> </a> </li>
-                            <li> <a href="#"> <i class="fa fa-twitter"></i>  </a> </li>
-                            <li> <a href="#"> <i class="fa fa-google"></i>  </a> </li>
-                            <li> <a href="#"> <i class="fa fa-youtube"></i>  </a> </li>
-                            <li> <a href="#"> <i class="fa fa fa-pinterest-p"></i>  </a> </li>
-                       </ul>
-
-                    </div>
-
-
-                  </div>
-              </div>
-
-            </div> -->
 
             <div class="navbar-main">
 
@@ -131,7 +99,7 @@
 
             <div class="item active">
 
-              <img src="assets/images/test-images/srimathi-jayaprakash-Z2YggU_u8mg-unsplash.jpg" alt="">
+              <img style="height: 620px;" src="https://images.unsplash.com/photo-1537531653369-236e00309977?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80" alt="">
 
               <div class="container">
 
@@ -150,7 +118,7 @@
 
             <div class="item ">
 
-              <img src="assets/images/test-images/bbh-singapore-d2hs0gRFCpQ-unsplash.jpg" alt="">
+              <img style="height: 620px;" src="https://images.unsplash.com/photo-1518131296958-df44106fd0ae?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80" alt="">
 
               <div class="container">
 
@@ -171,7 +139,7 @@
 
             <div class="item ">
 
-              <img src="assets/images/test-images/larm-rmah-AEaTUnvneik-unsplash.jpg" alt="">
+              <img style="height: 620px" src="https://images.unsplash.com/photo-1530490125459-847a6d437825?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=763&q=80" alt="">
 
               <div class="container">
 
@@ -199,7 +167,9 @@
             <span class="sr-only">Next</span>
           </a>
 
-    </div><!-- /.carousel -->
+    </div>
+
+
 
     <div class="section-home about-us fadeIn animated">
 
